overlays/development/course-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
